--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "drizzle-orm": "^0.34.0",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.446.0",
     "next": "15.1.2",
     "next-auth": "5.0.0-beta.25",
@@ -52,6 +53,7 @@
   },
   "devDependencies": {
     "@types/d3-scale": "^4.0.8",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^20",
     "@types/pdf-parse": "^1.1.4",
     "@types/react": "^18",
