--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.34.0",
+    "embla-carousel-react": "^8.5.2",
     "framer-motion": "^11.3.19",
     "geist": "^1.3.1",
     "jsonwebtoken": "^9.0.2",
